# mtga-export

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
mtga_export/: cli.py  daemon.py  export.py  resolver.py
scripts/: fetch-daemon.sh
tests/: conftest.py  test_cli.py  test_daemon.py  test_export.py  test_resolver.py
